# wave_rover_LoRa

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OTA_Update.py  README.md  docs.txt.txt  partition_8MB_OTA.csv  platformio.ini  sdkconfig.heltec_wifi_lora_32_V3  sdkconfig.heltec_wifi_lora_32_V3.old  sdkconfig.heltec_wifi_lora_32_V3_param_update
SDR/: LoRa_flowchart.grc  lora_analyzer_launch.sh  sdr_launch.sh
Tools/: capture_rtl_sdr_v4.sh  chirp_creation_with_IQ_signals_visualized.py  lora_decoder.py  lora_decoder.sh  lora_degray.py  lora_deinterleave.py  lora_deshuffle.py  lora_dewhiten.py  lora_encoder.py  lora_get_symbol_value_FFT.py  lora_gray_coding.py  lora_gray_encode.py  lora_hamming_decode.py  lora_symbol_observer.py
components/HeltecV3_HAL/: CMakeLists.txt
components/HeltecV3_HAL/include/: heltec_v3_HAL.hpp
components/HeltecV3_HAL/source/: heltec_v3_HAL.cpp
components/SX1262/: CMakeLists.txt
components/SX1262/include/: sx1262.hpp
components/SX1262/source/: sx1262.cpp
components/SX1262_Driver/: CMakeLists.txt
components/SX1262_Interface/: CMakeLists.txt
components/SX1262_Interface/include/: sx1262_interface.hpp
components/SX1262_Interface/source/: sx1262_interface.cpp
components/i2c_manager/Include/: i2c_manager.h
components/logger/: CMakeLists.txt
components/logger/include/: logger.h
components/logger/src/: logger.c
components/persistent_params/: CMakeLists.txt
components/web_terminal/: CMakeLists.txt
components/web_updater/: CMakeLists.txt  idf_component.yml
src/: CMakeLists.txt  main.cpp
(+10 files in other folders)
